Push dan benerin gambar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.digeat">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -12,7 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigEat">
-        <activity android:name=".customer.CustomerOrderingPage"></activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".customer.CustomerMapPage"
+            android:label="@string/title_activity_customer_map_page"></activity>
+        <activity android:name=".customer.CustomerOrderingPage" />
         <activity android:name=".customer.CustomerQRScan" />
         <activity android:name=".partner.PartnerProfilePage" />
         <activity android:name=".partner.PartnerShowQRPage" />
